# minutes_agent

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml  setup_python.sh
.devcontainer/: Dockerfile.dev  devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
app/: app.py
app/assets/: styles.css
app/components/: footer.py  navbar.py
app/pages/: home.py  page.py
artifacts/: README.md
outputs/deck/: README.md  main.md
src/: README.md  config.yaml  main.py
src/modules/: speech_to_text.py  summary.py
src/modules/plotly/: config.py
